# weather_air_quality_device

./: .gitignore  .pylintrc  MANIFEST.in  README.md  index.html  index.md  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: codeql-analysis.yml  pythonapp.yml  website.yml
doc/: pyWheater.fzz  setup_guide.md
doc/fritzing/: Readme.md
doc/internal/: RpiSetup.md  firewall.txt
doc/license/: unsplash_images_LICENSE.txt
resources/base/: events_schema.json  filetoc.json
resources/font/: filetoc.json
resources/gui_base/: filetoc.json
resources/weather_bgrs/: filetoc.json
resources/weather_icons/: filetoc.json
script/: PiWeather.desktop  pythonapp.yml
script/ci/: init_system.sh  setup_runner.sh
script/infra/setup/ci/: setup.sh  swarmpit-stack.yml
script/infra/setup/test/: init_system.sh
script/installer/: exec_install.sh  hide_mouse.sh  install_comitup.sh  install_influx.sh  install_wifi-connect.sh  installer.py  requirements.txt  set_swapfile.sh  setup_firewall.sh  start_installer.sh
script/installer/setup/: install_influx.sh
src/: main.py
src/assets/: Adapter.stl  Base.stl  Lid.stl  Readme.md  icon.kra  icon.xcf  info_overlay.xcf  loading_screen.kra  loading_screen.xcf  pre_loading_screen.kra  pre_loading_screen.xcf  splash.xcf  update_screen.xcf
src/installer/: __main__.py  apt_python.py  common.py  install.py  setup_system.py
src/piweather/: config.py
src/piweather/base/: __init__.py  component_ctrl.py  components.py  logger.py  system.py
src/piweather/components/: __init__.py  display.py  events.py  online_weather.py  power.py  sensors.py  sound.py  speach.py  updater.py
src/piweather/resources/: __init__.py  resources.py
src/piweather/settings/: __init__.py  settings.py
src/piweather/ui/: __init__.py  common.py  main_ui.py  options.py  sub_ui.py
src/piweather/ui/main_subs/: day_detail_view.py  exterior.py  forecast.py  infopane.py  interior.py
src/piweather/ui/qt/: __init__.py  english.qm  english.ts  hungarian.qm  hungarian.ts  options.ui  weather.ui
src/piweather/ui/widgets/: __init__ .py  clickable_label.py  fader_widget.py  fading_image.py  jumpslider.py  splashscreen.py  switch.py
src/waqd/: __init__.py  __main__.py  config.py
src/waqd/app/: __init__.py
src/waqd/assets/: __init__.py  assets.py
src/waqd/assets/base/: filetoc.json  tts_dict.json  ui_dict.json
src/waqd/assets/css/: custom_theme copy.css  custom_theme.css  daisyui5_full.css  keyboard.css  kioskboard-2.3.0.css  output.css  tailwindcss.js
src/waqd/assets/font/: filetoc.json
src/waqd/assets/general_icons/: Readme.md
src/waqd/assets/gui_base/: aimee-giles-ZcMUiZuOirY-unsplash.avif  filetoc.json  gaspar-uhas-Y3vsGbFCX-o-unsplash.avif  icon.avif  ish-consul-Ozlzi3DXuGg-unsplash.avif  joe-r-harris-KOnl4LFvwHE-unsplash.avif  miguel-dias-coelho-ZbGwGW_u8zI-unsplash.avif  noaa-n3WwFsUbSM8-unsplash.avif  pascal-debrunner-UjyUlxr1Yjo-unsplash.avif  pascal-debrunner-UjyUlxr1Yjo-unsplash_m.avif  wolfgang-hasselmann-bR_-gllg7Bs-unsplash.avif
src/waqd/assets/gui_bgrs/: premium_photo-1725408051956-a6dc142169bd.avif  readme.md
src/waqd/assets/html/: about.html  index.html  login.html  popup.html  settings.html  style.css  waqd.html
src/waqd/assets/js/: alpine_3_14_9.min.js  htmx_2_0_4.js  htmx_2_0_4.min.js  (+5 more)
src/waqd/base/: __init__.py  authentification.py  component.py  component_ctrl.py  component_reg.py  components copy.py  components.py  db_logger.py  file_logger.py  logger.py  network.py  password.py  signal.py  system.py  translation.py  web_session.py
src/waqd/components/: __init__.py  display.py  events.py  online_weather.py  power.py  sensor_logger.py  sensors.py  server.py  server2.py  server_flask.py  sound.py  sound_qt.py  speech.py  updater.py  web_session.py
src/waqd/settings/: __init__.py  settings.py  settings_json.py
src/waqd/ui/: __init__.py  common.py  light_style.qss.in  main_ui.py  options.py  sensor_detail_view.py  theming.py  weather_detail_view.py
src/waqd/web/: __init__.py  authentication.py  helper.py  main.py  templates.py
src/waqd_installer/: __main__.py  common.py  install.py  setup_system.py
src/waqd_website/: Dockerfile  docker-compose.yaml  main.py
src/waqd_website/menu/: routes.py
src/waqd_website/views/: index.html  landing.html
test/: conftest.py  requirements.txt  test_component.py  test_component_access.py  test_detail_view.py  test_display.py  test_events.py  test_installer.py  test_online_weather.py  test_option_gui.py  test_power.py  test_resource.py  test_sensors.py  test_settings.py  test_speach.py  test_speech.py  test_system.py  test_updater.py  test_z_integration.py
test/basics/: test_asset_access.py  test_display.py  test_installer.py  test_settings.py  test_system.py
test/components/: test_component.py  test_component_access.py  test_events.py  test_online_weather.py  test_power.py  test_sensor.py  test_sensors.py  test_server.py  test_speech.py  test_updater.py
test/integration/: _test_integration.py  _test_updater.py  test_integration.py  test_updater.py
test/mock/: adafruit_bmp280.py  adafruit_ccs811.py  adafruit_dht.py  board.py  busio.py  ccs811.py  mh_z19.py  rpi_backlight.py
test/mock/Adafruit_BME280/: __init__.py  advanced.py
test/mock/Adafruit_CCS811/: __init__.py
test/mock/Adafruit_DHT/: __init__.py
test/mock/RPi/: GPIO.py
test/mock/nmcli/: __init__.py
test/mock/target_pkgs/: adafruit_platformdetect.py
test/testdata/auto_updater/: 50unattended-upgrades  autostart.txt  docker_pi_qemu  dockerfile_base  dockerfile_install  dockerfile_install_legacy  dockerfile_rpi_base  dockerfile_update
test/testdata/events/: events.json
test/testdata/integration/: config.ini
test/testdata/nonexistant/: bullshit.conf
test/testdata/online_weather/: aw_current_weather.json  aw_forecast.json  om_current_weather.json  om_hourly_weather.json  om_search_berlin.json  ow_current_weather.json  ow_forecast.json  ow_forecast_multi_detail.json  ow_forecast_multi_main.json  ow_new_day_cw.json  ow_new_day_forecast.json
test/ui/: test_detail_view.py  test_option_gui.py
(+196 files in other folders)
